@@ -1,16 +1,19 @@
 package io.openems.backend.metadata.odoo.odoo;
 
+import static java.util.Collections.emptyMap;
+
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -18,7 +21,7 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Future;
+import java.util.concurrent.CompletionException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -101,7 +104,9 @@ public class OdooUtils {
 		HttpURLConnection connection = null;
 		try {
 			// Open connection to Odoo
-			connection = (HttpURLConnection) new URL(url).openConnection();
+			connection = (HttpURLConnection) URI.create(url) //
+					.toURL() //
+					.openConnection(); //
 			connection.setConnectTimeout(5000);// 5 secs
 			connection.setReadTimeout(timeout);// 5 secs
 			connection.setRequestProperty("Accept-Charset", "US-ASCII");
@@ -152,9 +157,15 @@ public class OdooUtils {
 					throw OpenemsError.COMMON_AUTHENTICATION_FAILED.exception();
 
 				case "odoo.http.SessionExpiredException":
-					throw OpenemsError.COMMON_AUTHENTICATION_FAILED.exception();
+					throw new SessionExpiredException();
 
 				default:
+					// for OpenemsExceptions from Odoo only throw OpenemsException with message for
+					// more readability
+					if (dataName.endsWith("OpenemsException")) {
+						throw new OpenemsException(dataMessage);
+					}
+
 					var exception = "Exception for Request [" + request.toString() + "] to URL [" + url + "]: " //
 							+ dataMessage + ";" //
 							+ " Code [" + code + "]" //
@@ -188,8 +199,8 @@ public class OdooUtils {
 
 	protected static SuccessResponseAndHeaders sendAdminJsonrpcRequest(Credentials credentials, String url,
 			JsonObject request, int timeout) throws OpenemsNamedException {
-		var session = OdooUtils.login(credentials, "admin", credentials.getPassword());
-		return OdooUtils.sendJsonrpcRequest(credentials.getUrl() + url, "session_id=" + session, request, timeout);
+		var session = OdooUtils.loginAdmin(credentials);
+		return OdooUtils.sendJsonrpcRequest(credentials.url() + url, "session_id=" + session, request, timeout);
 	}
 
 	/**
@@ -203,8 +214,8 @@ public class OdooUtils {
 	 */
 	protected static SuccessResponseAndHeaders sendAdminJsonrpcRequest(Credentials credentials, String url,
 			JsonObject request) throws OpenemsNamedException {
-		var session = OdooUtils.login(credentials, "admin", credentials.getPassword());
-		return OdooUtils.sendJsonrpcRequest(credentials.getUrl() + url, "session_id=" + session, request);
+		var session = OdooUtils.loginAdmin(credentials);
+		return OdooUtils.sendJsonrpcRequest(credentials.url() + url, "session_id=" + session, request);
 	}
 
 	/**
@@ -214,34 +225,33 @@ public class OdooUtils {
 	 * @param url         to send the request
 	 * @param request     to send
 	 * @return SuccessResponseAndHeaders response as Future
-	 * @throws OpenemsNamedException on error
 	 */
-	protected static Future<SuccessResponseAndHeaders> sendAdminJsonrpcRequestAsync(Credentials credentials, String url,
-			JsonObject request) throws OpenemsNamedException {
-		var completableFuture = new CompletableFuture<SuccessResponseAndHeaders>();
-		completableFuture.completeAsync(() -> {
+	protected static CompletableFuture<SuccessResponseAndHeaders> sendAdminJsonrpcRequestAsync(Credentials credentials,
+			String url, JsonObject request) {
+		return CompletableFuture.supplyAsync(() -> {
 			try {
 				return sendAdminJsonrpcRequest(credentials, url, request);
 			} catch (OpenemsNamedException e) {
-				completableFuture.completeExceptionally(e);
+				throw new CompletionException(e);
 			}
-			return null;
 		});
-		return completableFuture;
+	}
+
+	protected static String loginAdmin(Credentials credentials) throws OpenemsNamedException {
+		return OdooUtils.login(credentials, credentials.login(), credentials.password());
 	}
 
 	/**
-	 * Authenticates a user using Username and Password.
+	 * Authenticates a user using Login and Password.
 	 *
 	 * @param credentials used to get Odoo url
-	 * @param username    the Username
+	 * @param login       the login (normally username)
 	 * @param password    the Password
 	 * @return the session_id
 	 * @throws OpenemsNamedException on login error
 	 */
-	protected static String login(Credentials credentials, String username, String password)
-			throws OpenemsNamedException {
-		if (username.isBlank() || password.isBlank()) {
+	public static String login(Credentials credentials, String login, String password) throws OpenemsNamedException {
+		if (login.isBlank() || password.isBlank()) {
 			// Do not even send request if username or password are blank
 			throw OpenemsError.COMMON_AUTHENTICATION_FAILED.exception();
 		}
@@ -249,12 +259,12 @@ public class OdooUtils {
 				.addProperty("jsonrpc", "2.0") //
 				.addProperty("method", "call") //
 				.add("params", JsonUtils.buildJsonObject() //
-						.addProperty("db", credentials.getDatabase()) //
-						.addProperty("login", username.toLowerCase()) //
+						.addProperty("db", credentials.database()) //
+						.addProperty("login", login.toLowerCase()) //
 						.addProperty("password", password) //
 						.build()) //
 				.build();
-		var response = OdooUtils.sendJsonrpcRequest(credentials.getUrl() + "/web/session/authenticate", request);
+		var response = OdooUtils.sendJsonrpcRequest(credentials.url() + "/web/session/authenticate", request);
 		var sessionIdOpt = getFieldFromSetCookieHeader(response.headers, "session_id");
 		if (!sessionIdOpt.isPresent()) {
 			throw OpenemsError.COMMON_AUTHENTICATION_FAILED.exception();
@@ -269,9 +279,10 @@ public class OdooUtils {
 
 	private static Object executeKw(Credentials creds, String model, String action, Object[] arg, Map<String, ?> kw)
 			throws MalformedURLException, XMLRPCException {
-		var params = new Object[] { creds.getDatabase(), creds.getUid(), creds.getPassword(), model, action, arg, kw };
-		var client = new XMLRPCClient(new URL(String.format("%s/xmlrpc/2/object", creds.getUrl())),
-				XMLRPCClient.FLAGS_NIL);
+		var params = new Object[] { creds.database(), creds.uid(), creds.password(), model, action, arg, kw };
+		var uri = URI.create(String.format("%s/xmlrpc/2/object", creds.url()));
+		var client = new XMLRPCClient(uri.toURL(), XMLRPCClient.FLAGS_NIL);
+
 		client.setTimeout(60 /* seconds */);
 		return client.call("execute_kw", params);
 	}
@@ -293,22 +304,37 @@ public class OdooUtils {
 	 *
 	 * @param credentials the Odoo credentials
 	 * @param model       Odoo model to query (e.g. 'res.partner')
+	 * @param params      the params, e.g ("limit","1")
 	 * @param domains     Odoo domain filters
 	 * @return Odoo object ids
 	 * @throws OpenemsException on error
 	 */
-	protected static Integer[] search(Credentials credentials, String model, Domain... domains)
+	protected static Integer[] search(Credentials credentials, String model, Map<String, ?> params, Domain... domains)
 			throws OpenemsException {
 		// Add domain filter
 		var domain = getAsObjectArray(domains);
 		Object[] paramsDomain = { domain };
 		try {
 			// Execute XML request
-			var resultObjs = (Object[]) OdooUtils.executeKw(credentials, model, "search", paramsDomain, Map.of());
+			var resultObjs = (Object[]) OdooUtils.executeKw(credentials, model, "search", paramsDomain, params);
 			return Arrays.copyOf(resultObjs, resultObjs.length, Integer[].class);
 		} catch (Throwable e) {
 			throw new OpenemsException("Unable to search from Odoo: " + e.getMessage());
 		}
+	}
+
+	/**
+	 * Executes a search on Odoo.
+	 *
+	 * @param credentials the Odoo credentials
+	 * @param model       Odoo model to query (e.g. 'res.partner')
+	 * @param domains     Odoo domain filters
+	 * @return Odoo object ids
+	 * @throws OpenemsException on error
+	 */
+	protected static Integer[] search(Credentials credentials, String model, Domain... domains)
+			throws OpenemsException {
+		return OdooUtils.search(credentials, model, emptyMap(), domains);
 	}
 
 	/**
@@ -376,16 +402,33 @@ public class OdooUtils {
 	 * @return the records as a Map array
 	 * @throws OpenemsException on error
 	 */
-	@SuppressWarnings("unchecked")
 	protected static Map<String, Object>[] searchRead(Credentials credentials, String model, Field[] fields,
 			Domain... domains) throws OpenemsException {
-		// Create request params
+		return OdooUtils.searchRead(credentials, model, fields, emptyMap(), domains);
+	}
+
+	/**
+	 * Search-Reads multiple records from Odoo.
+	 *
+	 * @param credentials the Odoo credentials
+	 * @param model       Odoo model to query (e.g. 'res.partner')
+	 * @param fields      fields that should be read
+	 * @param params      the odoo query params
+	 * @param domains     filter domains
+	 * @return the records as a Map array
+	 * @throws OpenemsException on error
+	 */
+	@SuppressWarnings("unchecked")
+	protected static Map<String, Object>[] searchRead(Credentials credentials, String model, Field[] fields,
+			Map<String, ?> params, Domain... domains) throws OpenemsException {
 		// Add domain filter
 		var domain = getAsObjectArray(domains);
 		var paramsDomain = new Object[] { domain };
 		// Add fields
 		var fieldStrings = getAsStringArray(fields);
-		var paramsFields = Map.of("fields", fieldStrings);
+		final var paramsFields = new HashMap<String, Object>();
+		paramsFields.put("fields", fieldStrings);
+		paramsFields.putAll(params);
 		try {
 			// Execute XML request
 			var result = (Object[]) OdooUtils.executeKw(credentials, model, "search_read", paramsDomain, paramsFields);
@@ -408,7 +451,7 @@ public class OdooUtils {
 			throws OpenemsException {
 		try {
 			// Execute XML request
-			var resultObj = (Object[]) executeKw(credentials, "ir.model.data", "get_object_reference",
+			var resultObj = (Object[]) executeKw(credentials, "ir.model.data", "check_object_reference",
 					new Object[] { module, name });
 			if (resultObj == null) {
 				throw new OpenemsException(
@@ -420,26 +463,13 @@ public class OdooUtils {
 		}
 	}
 
-	/**
-	 * Adds a message in Odoo Chatter ('mail.thread').
-	 *
-	 * @param credentials the Odoo credentials
-	 * @param model       Odoo model (e.g. 'res.partner')
-	 * @param id          id of model
-	 * @param message     the message
-	 * @throws OpenemsException on error
-	 */
-	protected static void addChatterMessage(Credentials credentials, String model, int id, String message)
+	protected static Integer[] getObjectReferences(Credentials credentials, String module, List<String> name)
 			throws OpenemsException {
-		try {
-			// Execute XML request
-			var resultObj = executeKw(credentials, model, "message_post", new Object[] { id, message });
-			if (resultObj == null) {
-				throw new OpenemsException("Returned Null");
-			}
-		} catch (Throwable e) {
-			throw new OpenemsException("Unable to write to Odoo: " + e.getMessage());
+		final var ids = new ArrayList<Integer>();
+		for (var s : name) {
+			ids.add(getObjectReference(credentials, module, s));
 		}
+		return ids.toArray(Integer[]::new);
 	}
 
 	/**
@@ -549,12 +579,10 @@ public class OdooUtils {
 	 * @return the odoo reference id or empty {@link Optional}
 	 */
 	protected static Optional<Integer> getOdooReferenceId(Object object) {
-		if (object instanceof Object[]) {
-			var odooReference = (Object[]) object;
-
-			if (odooReference.length > 0 && odooReference[0] instanceof Integer) {
-				return Optional.of((Integer) odooReference[0]);
-			}
+		if (object instanceof Object[] odooReference //
+				&& odooReference.length > 0 //
+				&& odooReference[0] instanceof Integer i) {
+			return Optional.of(i);
 		}
 
 		return Optional.empty();
@@ -571,16 +599,17 @@ public class OdooUtils {
 	 * @throws OpenemsNamedException on error
 	 */
 	protected static byte[] getOdooReport(Credentials credentials, String report, int id) throws OpenemsNamedException {
-		var session = OdooUtils.login(credentials, "admin", credentials.getPassword());
+		var session = OdooUtils.loginAdmin(credentials);
 
 		HttpURLConnection connection = null;
 		try {
-			connection = (HttpURLConnection) new URL(
-					credentials.getUrl() + "/report/pdf/" + report + "/" + id + "?session_id=" + session)
+			connection = (HttpURLConnection) URI
+					.create(credentials.url() + "/report/pdf/" + report + "/" + id + "?session_id=" + session).toURL()
 					.openConnection();
 			connection.setConnectTimeout(5000);
 			connection.setReadTimeout(5000);
 			connection.setRequestMethod("GET");
+			connection.setRequestProperty("Cookie", "session_id=" + session);
 			connection.setDoOutput(true);
 
 			return ByteStreams.toByteArray(connection.getInputStream());
@@ -591,6 +620,42 @@ public class OdooUtils {
 				connection.disconnect();
 			}
 		}
+	}
+
+	/**
+	 * Odoo returns unset values as false. So this Method checks if the value is
+	 * meant to be null.
+	 *
+	 * @param <T>          type to be expected
+	 * @param entry        raw entry value
+	 * @param expectedType class instance of expected type
+	 * @return false if value is meant to be null.
+	 */
+	private static <T> boolean isUnset(Object entry, Class<T> expectedType) {
+		var entryType = entry.getClass();
+		if (entryType.isAssignableFrom(Boolean.class) && !expectedType.isAssignableFrom(Boolean.class)
+				&& !Boolean.class.cast(entry)) {
+			return true;
+		}
+		return false;
+	}
+
+	private static Object getRawValue(Field field, Map<String, ?> values) {
+		if (field == null || values == null) {
+			var warningMsg = new StringBuilder() //
+					.append("[getAsOrElse] missing parameter (") //
+					.append(field == null ? "field is null, " : "") //
+					.append(values == null ? "values is null, " : "") //
+					.toString();
+			log.warn(warningMsg);
+			return null;
+		}
+
+		if (!values.containsKey(field.id())) {
+			return null;
+		}
+
+		return values.get(field.id());
 	}
 
 	/**
@@ -617,29 +682,42 @@ public class OdooUtils {
 	 * @return value found in map casted to type or alternate on error
 	 */
 	public static <T> T getAsOrElse(Field field, Map<String, ?> values, Class<T> type, T alternate) {
-		if (field == null || values == null || type == null) {
-			var warningMsg = new StringBuilder().append("[getAsOrElse] missing parameter (")
-					.append(field == null ? "field is null, " : "").append(values == null ? "values is null, " : "")
-					.append(type == null ? "type is null, " : "").toString();
-			log.warn(warningMsg);
+		var entry = getRawValue(field, values);
+
+		if (entry == null || isUnset(entry, type)) {
 			return alternate;
-		}
-
-		if (!values.containsKey(field.id())) {
-			return alternate;
-		}
-
-		var entry = values.get(field.id());
-		var entryType = entry.getClass();
-
-		// Entry equals false if table value is null;
-		if (entryType.isAssignableFrom(Boolean.class) && !type.isAssignableFrom(Boolean.class)
-				&& !Boolean.class.cast(entry)) {
-			return null;
 		}
 
 		try {
+			if (type.equals(ZonedDateTime.class)) {
+				return type.cast(DateTime.stringToDateTime(entry.toString()));
+			}
 			return type.cast(entry);
+		} catch (Throwable t) {
+			log.warn(t.getMessage());
+			return alternate;
+		}
+	}
+
+	/**
+	 * Return Field value in values and cast it to value of type 'enumType'.
+	 *
+	 * @param <T>       expected type of value
+	 * @param field     to search for
+	 * @param values    map with values to search in
+	 * @param enumType  to cast into
+	 * @param alternate value to return
+	 * @return value found in map casted to type or alternate on error
+	 */
+	public static <T extends Enum<T>> T getAsEnum(Field field, Map<String, ?> values, Class<T> enumType, T alternate) {
+		var entry = getRawValue(field, values);
+
+		if (entry == null || isUnset(entry, enumType)) {
+			return alternate;
+		}
+
+		try {
+			return Enum.valueOf(enumType, entry.toString().toUpperCase());
 		} catch (Throwable t) {
 			log.warn(t.getMessage());
 			return alternate;
@@ -658,7 +736,7 @@ public class OdooUtils {
 	 * @param fieldname the field name
 	 * @return value as optional
 	 */
-	private static Optional<String> getFieldFromSetCookieHeader(Map<String, List<String>> headers, String fieldname) {
+	public static Optional<String> getFieldFromSetCookieHeader(Map<String, List<String>> headers, String fieldname) {
 		for (Entry<String, List<String>> header : headers.entrySet()) {
 			var key = header.getKey();
 			if (key != null && key.equalsIgnoreCase("Set-Cookie")) {
@@ -704,7 +782,7 @@ public class OdooUtils {
 
 				return ZonedDateTime.parse(dateTimeString, DATETIME_FORMATTER);
 			} catch (DateTimeParseException e) {
-				log.warn("'" + dateTimeString + "' is not of format " + SERVER_DATETIME_FORMAT, e);
+				log.warn("OdooUtils.DateTime: '{}' is not of format {}", dateTimeString, SERVER_DATETIME_FORMAT);
 				return null;
 			}
 		}
